# wagtail_template

./: .gitignore  Dockerfile  README.md  db.sqlite3  pyproject.toml
home/: models.py
home/migrations/: 0003_homepage_body_homepage_hero_text.py
home/static/css/: home_page.css
home/templates/home/: home_page.html
wagtail_template/: wsgi.py
wagtail_template/settings/: base.py  dev.py
wagtail_template/templates/: base.html
