[tool.poetry]
name = "wagtail-template"
version = "0.1.0"
description = ""
authors = ["Kai.Waloen <kawal5842@uib.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wagtail = ">=6.2,<6.3"
django = ">=4.2,<5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
